20_platform/auth/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    gateway.networking.k8s.io/public-routes: "true"
