20_platform/auth/authentik_ldap_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-outpost-ldap
  namespace: auth
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/name: "authentik"
    app.kubernetes.io/instance: "authentik"
    app.kubernetes.io/component: "outpost-ldap"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: "authentik"
      app.kubernetes.io/instance: "authentik"
      app.kubernetes.io/component: "outpost-ldap"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "authentik"
        app.kubernetes.io/instance: "authentik"
        app.kubernetes.io/component: "outpost-ldap"
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: ldap
          image: ghcr.io/goauthentik/ldap:2026.8.3
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: ldap
              containerPort: 3389
              protocol: TCP
            - name: ldaps
              containerPort: 6636
              protocol: TCP
            - name: monitoring
              containerPort: 9300
              protocol: TCP
          resources:
            requests:
              memory: "250Mi"
              cpu: "100m"
            limits:
              memory: "300Mi"
              cpu: "1"
