20_platform/auth/authentik_server_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: auth
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/component: server
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress
      namespace: ingress
      sectionName: https
  hostnames:
    - "auth.${vals_info_cluster_domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 2m
      backendRefs:
        - group: ""
          kind: Service
          name: authentik-server
          port: 80
